Fixed image stretching in IE and Edge.

--- a/css/custom.css
+++ b/css/custom.css
@@ -16,14 +16,23 @@
   color: #9d9d9d;
 }
 
+.carousel-inner {
+  max-height: 500px;
+  min-height: 200px;
+}
+
 .carousel-inner img {
-  width: 100%; /* Set width to 100% */
+/*
+  width: 100%;
   height: 100%;
   object-fit: cover;
   margin: auto;
   min-height:200px;
   max-height: 500px;
+*/
 }
+
+
 
 .homeimg{
   padding-bottom: 10px;
